--- a/portfolio.html
+++ b/portfolio.html
@@ -130,9 +130,14 @@
             <p class="project-text">Веб-сайт</p>
           </li>
           <li class="list-item">
-            <img src="./images/project-limited-edition.jpg" alt="розгорнута
+            <img
+              src="./images/project-limited-edition.jpg"
+              alt="розгорнута
             книжка 1ст. дівчина сушить волося, 2ст. дві дівчини показують знак
-            "peace" width="370" height="294" />
+            'peace'"
+              width="370"
+              height="294"
+            />
             <h2 class="project-title">Видання Limited Edition</h2>
             <p class="project-text">Дизайн</p>
           </li>
